@@ -43,7 +43,9 @@
 (WriteWhiteBackground): Fix SourceForge bug #350 &quot;SEGV in
 coders/psd.c:1685&quot;.
 (DecodeImage): Fix SourceForge bug #351 &quot;heap-buffer-overflow in
-coders/psd.c:142&quot;.</li>
+coders/psd.c:142&quot;.
+(ReadPSDImage): Fix SourceForge bug #342 &quot;out-of-bounds write in
+coders/psd.c:892&quot;</li>
 <li>coders/xcf.c (load_tile): Fix SourceForge bug #337
 &quot;heap-buffer-overflow in coders/xcf.c:373&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix SourceForge bug #340
